<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/first_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_photo"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/card_image"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo_icon" />

            <EditText
                android:id="@+id/name_restaurant"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_photo"
                android:hint="@string/name_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/address_restaurant"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_restaurant"
                android:hint="@string/address_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/zipcode_restaurant"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_restaurant"
                android:hint="@string/zipcode_hint"
                android:inputType="number" />

            <EditText
                android:id="@+id/state_restaurant"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_restaurant"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/zipcode_restaurant"
                android:hint="@string/state_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/typeOfFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/zipcode_restaurant"
                android:onClick="???"
                android:text="@string/typeOfFood" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/typeOfFood"
                android:onClick="???"
                android:text="@string/description_restaurant" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
